--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 
     <!-- plugin versions -->
     <spotless-maven-plugin.version>2.44.2</spotless-maven-plugin.version>
+    <wiremock.version>3.10.0</wiremock.version>
   </properties>
 
   <dependencies>
@@ -66,6 +67,12 @@
       <artifactId>mapstruct</artifactId>
       <version>${org.mapstruct.version}</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.wiremock</groupId>
+      <artifactId>wiremock-standalone</artifactId>
+      <version>${wiremock.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
